<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">现金仓储</string>
    <string name="module1">任务</string>
    <string name="module2">消息</string>
    <string name="module3">我</string>
    <string name="module4">工具</string>
    <string name="module4_Identify">识别钞箱</string>
    <string name="action_settings">Settings</string>
    <string name="registerNameHint">登录名</string>
    <string name="nullError">不能为空</string>
    <string name="passwordlengthError">长度为6-12位</string>
    <string name="passworddifferentError">密码不一致</string>
    <string name="registerPasswordHint">密码（长度6-12位）</string>
    <string name="password">密码</string>
    <string name="registerPassword2Hint">确认密码</string>
    <string name="login">登录</string>
    <string name="forgetPassword">忘记密码？</string>
    <string name="register_now">立即注册 >></string>
    <string name="logining">正在登录，请稍候...</string>
    <string name="loginFailed">登录失败</string>
    <string name="information">个人信息</string>
    <string name="updatePassword">修改密码</string>
    <string name="oldPasswordHint">原密码</string>
    <string name="submitPassword">确定修改</string>
    <string name="setting">设置</string>
    <string name="nickName">姓名：</string>
    <string name="userName">账号：</string>
    <string name="head_image">头像</string>
    <string name="submenu4">设置</string>
    <string name="submenu5">修改密码</string>
    <string name="submenu6">检查更新</string>
    <string name="ver">1.0</string>
    <string name="logout">注销登录</string>
    <string name="info_sex">性别</string>
    <string name="version">版本信息</string>
    <string name="confirm">确定</string>
    <string name="exit">退出</string>

    <!-- 下拉刷新，上拉加载更多 -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="read_message">查看消息</string>
    <string name="time">时间：</string>
    <string name="tab_1_btn_report">确认任务</string>
    <string name="ok">确定</string>
    <string name="cancle">取消</string>
    <string name="down_state">正在下载：%s</string>
    <string name="app_error">应用程序错误</string>
    <string name="app_error_message">很抱歉，小屁孩耍脾气啦。<br />我们会帮你教训一下这个小屁孩！</string>
    <string name="submit_report">打报告去</string>
    <string name="hint_username">输入账号/邮箱</string>
    <string name="hint_password">密码</string>
    <string name="tip_please_input_username">请输入用户名</string>
    <string name="tip_please_input_password">请输入密码</string>
    <string name="tip_please_input_password_less6">密码长度不能小于6位，多于12位</string>
    <string name="tip_password_invalid">密码不一致</string>
    <string name="progress_login">正在登录…</string>
    <string name="loading">加载中…</string>
    <string name="tip_login_error_for_network">对不起,无法登录</string>
    <string name="tip_login_error_no_user">没找到用户，请检查用户名和密码</string>
    <string name="tip_no_internet">当前没有可用的网络链接</string>
    <string name="tip_loading_error">加载数据失败</string>
    <string name="btn_read">读取</string>
    <string name="btn_stop">停止</string>
    <string name="btn_clear">清空</string>
    <string name="btn_save">提交</string>
    <string name="title_checkStore">盘库</string>
    <string name="title_prepare">准备钞箱</string>
    <string name="operation_success">操作成功</string>
    <string name="operation_fail">操作失败，请重试</string>

    <!-- quick option -->
    <string name="quick_option_text">文字</string>
    <string name="quick_option_album">相册</string>
    <string name="quick_option_photo">拍照</string>
    <string name="quick_option_voice">语音</string>
    <string name="quick_option_note">便签</string>
    
    <string name="idInventoryFinished_Colon">盘点结束：</string>
    <string name="found_statistics">已扫描 ：%d</string>
    <string name="quick_option_scan">扫一扫</string>
    <string name="supercargo">押运人员专用</string>
    <string name="scan_data">扫描数据</string>
    
    
</resources>