<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="#f7f7f7"
              android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/pic_header_02"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/back"
            android:onClick="back"/>

        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:layout_toRightOf="@id/btn_back"
            android:text="@string/updatePassword"
            android:textColor="#ffffff"
            android:textSize="20sp"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/oldPassword"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_editbox"
        android:hint="@string/oldPasswordHint"
        android:inputType="textPassword"
        android:maxLength="15"
        android:padding="13dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:background="@drawable/login_editbox"
        android:hint="@string/registerPasswordHint"
        android:inputType="textPassword"
        android:maxLength="12"
        android:padding="13dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:background="@drawable/login_editbox"
        android:hint="@string/registerPassword2Hint"
        android:inputType="textPassword"
        android:padding="13dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/btn_commitPwd"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_style_green"
        android:onClick="commitPwd"
        android:text="@string/submitPassword"
        android:textColor="#ffffff"
        android:textSize="18sp"/>

</LinearLayout>